Fix overlapping elements in wiki pages

--- a/src/styles/components/_box.scss
+++ b/src/styles/components/_box.scss
@@ -20,6 +20,7 @@
 .controller-wiki.action-show .wiki.wiki-page {
   margin-top: 25px;
   margin-bottom: 10px;
+  clear: right;
 }
 
 #activity {
